--- a/public/chat.html
+++ b/public/chat.html
@@ -49,6 +49,7 @@
             </div>
         </div>
 
+        <script src="//cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/main.js"></script>
     </body>
